Bug 165040 - LAYOUT: Images no longer visible - selection handles appear on page-before-anchor-text
Summary: LAYOUT: Images no longer visible - selection handles appear on page-before-an...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:25.8.0 target:25.2.2
Keywords: bibisected, bisected
Depends on:
Blocks: DOCX-Objects
  Show dependency treegraph
 
Reported: 2025-02-04 15:31 UTC by Justin L
Modified: 2025-02-26 17:52 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
also forum-mso-en3-26783.docx: table5 often not visible (109.73 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2025-02-10 19:27 UTC, Justin L
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Justin L 2025-02-04 15:31:27 UTC
Some layout issues have been exposed by 
25.2 commit 1de6bea27ed36167ec138818607da7b49e92ec4a
Author: Justin Luth on Wed Aug 28 09:30:18 2024 -0400
    tdf#143899 compat15 layout: restrict body fly to PAGE_PRINT_AREA

One example is kv.docx (attachment 158227 [details] from bug 107391). This document has a history of not laying out very well. With the above commit, the second-last image (Image6) is no longer visible - apparently pushed up into the previous page. It is anchored "from bottom of line".

Something similar is happening on page one of Image to paragraph (1).docx (attachment 162642 [details] from bug 134509). In this case it is "from top of paragraph".
Comment 1 Justin L 2025-02-10 19:27:20 UTC
Created attachment 199115 [details]
also forum-mso-en3-26783.docx: table5 often not visible

Also e343334.docx (attachment 164066 [details] from bug 135576)
  - Image1 should be visible on page 2 (both pages should have identical images)
Comment 2 Commit Notification 2025-02-10 23:25:58 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/95b173d41fa7a450821d0e69225df3faa899d290

tdf#165040 tdf#143899 compat15 layout: restrict body fly #2

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2025-02-11 09:07:54 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/45d640fcf5b473acec55ef45503aa56b998c3b8b

tdf#165040 tdf#143899 compat15 layout: restrict body fly #2

It will be available in 25.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.